fixed alignment of form

--- a/css/screen.css
+++ b/css/screen.css
@@ -3,7 +3,6 @@ body {
   justify-content: center;
   align-items: center;
   background-color: rgb(255, 255, 255);
-  padding: 20px;
   height: 100vh;
 }
 
@@ -14,7 +13,6 @@ body {
   border-radius: 5px;
   box-shadow: 0px 0px 15px rgba(72, 72, 72, 0.32);
   max-width: 500px;
-  width: 100%;
   text-align: center;
 }
 
